--- a/index.html
+++ b/index.html
@@ -36,6 +36,34 @@ At the beginning, you can only practice the present tense. Each one of the other
 Have fun!
 <br><br>
 Coming soon on the App Store.
+<br><br>
+<strong>
+Alien:</strong><br>
+https://www.instagram.com/p/B1eQdaqiUN2/
+<br><br>
+<strong>
+Background:</strong><br>
+https://www.freepik.com/free-vector/space-background-with-quote_2864903.htm
+<br><br>
+<strong>
+Planets icons:</strong><br>
+https://www.freepik.com/free-vector/set-vector-cartoon-illustrations-fantasy-alien-planets_1215830.htm
+<br><br>
+<strong>
+Locker icon:</strong><br>
+https://www.freepik.com/free-vector/illustration-cloud-security-icon_2609998.htm
+<br><br>
+<strong>
+Heart:</strong><br>
+https://www.freepik.com/free-vector/heart_2900812.htm
+<br><br>
+<strong>
+UFO in the background:</strong><br>
+https://www.freepik.com/free-vector/galaxy-background-with-colorful-planets_2920897.htm
+<br><br>
+<strong>
+Emojis:</strong><br>
+https://www.freepik.com/free-vector/several-emoticons-flat-style_950559.htm
 
 </p>
 
