Links to app added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ At the beginning, you can only practice the present tense. Each one of the other
 <br><br>
 Have fun!
 <br><br>
-Coming soon on the App Store.
+<a href="https://apps.apple.com/es/app/spanish-verbs-galaxy-game/id1518826993">App Store</a> | <a href="https://play.google.com/store/apps/details?id=com.OSAA.SpanishGalaxyGame">Play Store</a>
 <br><br>
 <strong>
 Alien:</strong><br>
