--- a/wallspaces_privacy.html
+++ b/wallspaces_privacy.html
@@ -35,8 +35,8 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Jesús Garcés Villarrubia built the Wallspaces app as an Ad Supported app. This SERVICE is provided by OSAA at no cost and is intended for use as is.
-                </p> <p>
+    Jesús Garcés Villarrubia built the Wallspaces app as an Ad Supported app. This SERVICE is provided by Jesús Garcés Villarrubia at no cost and is intended for use as is.
+</p> <p>
                   This page is used to inform visitors regarding my
                   policies with the collection, use, and disclosure of Personal
                   Information if anyone decided to use my Service.
