Privacy Policies updated

--- a/cosmic_stones_privacy.html
+++ b/cosmic_stones_privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Wallspaces Privacy Policy</title>
+    <title>Cosmic Stones Privacy Policy</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -23,7 +23,7 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wallspaces</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cosmic Stones</h3>
 
 <!DOCTYPE html>
     <html>
@@ -35,7 +35,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-    Jesús Garcés Villarrubia built the Wallspaces app as an Ad Supported app. This SERVICE is provided by Jesús Garcés Villarrubia at no cost and is intended for use as is.
+    Jesús Garcés Villarrubia developed Cosmic Stones as a premium, ad-free app. This SERVICE is provided by Jesús Garcés Villarrubia at a cost and is intended for use as is.
 </p> <p>
                   This page is used to inform visitors regarding my
                   policies with the collection, use, and disclosure of Personal
@@ -56,10 +56,6 @@
                   identifiable information. The information that
                   I request will be retained on your device and is not collected by me in any way.
 
-<p>                     The app does use third party services that may collect                     information used to identify you.                   </p>
-<p>                       Link to privacy policy of third party service providers                       used by the app                     </p>
-
-                  <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
                 </p> <!----> <p><strong>Log Data</strong></p> <p>
                   I want to inform you that whenever you
                   use my Service, in a case of an error in the app
