--- a/bbs_privacy.html
+++ b/bbs_privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Vistaero Apps Homepage</title>
+    <title>Blue Box Simulator Privacy Policy Apps Homepage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
