Update BBS homepage

--- a/bbs/index.html
+++ b/bbs/index.html
@@ -23,43 +23,44 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>App Description</h3>
-
-<p>Have a Time Machine Inside Your Phone!
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Have a Time Machine Inside Your Phone!</h3>
+<img src="Saturn.jpeg" alt="Your ship flying over the rings of Saturn at WARP speeds">
 <br><br>
-You may know that police telephone blue box that is bigger on the inside and can travel anywhere in time and space. Now you can have it on your phone!
+Step into the incredible world of time and space travel with the Blue Box Simulator, your very own Time And Space machine on your phone! Explore the universe and travel to any planet you desire at superluminal speeds!
 <br><br>
-After starting up, tap on the screen to show the controls (and a nice date and time label).
+With easy-to-use controls, simply tap the screen to access the console and let your adventure begin.
 <br><br>
-Tap on Space Throttle for take off and start your journey through the time vortex, and tap again to land.
+Get ready to experience manual flight like never before! Set the Handbrake to FLIGHT and pull down the Space Throttle to unleash maximum thrust, allowing you to fly around planets and explore the vast expanse of space.
 <br><br>
-You can travel to any date and coordinates or play some minigames, and watch your blue box materialize or dematerialize.
+Choose your destination by tapping on a planet icon or entering the coordinates in the menu, and your ship will take off on a thrilling journey through time and space. Adjust your cruise speed with the Space Throttle to take in the stunning sights and sounds of the universe.
 <br><br>
-And last but not less, this app is completely free and ad-free!
+Or, if you're feeling adventurous, dematerialize and travel through the Time Vortex by setting the Handbrake to VORTEX and pulling the Space Throttle down to 100. Change your destination while in the vortex and then pull up the Space Throttle to materialize in your new location!
 <br><br>
-If you want to support us, just leave a review telling us what you would like to see in the next update!
+We're always looking to improve the Blue Box Simulator, so please show your support by joining our Patreon or leaving a review with your suggestions for our next exciting update!
 <br><br>
 Notice: This app is not affiliated with the BBC in any way. 
 <br><br>
-Screen animation made by BioDoctor900
+2012/2014 Interior screen animation made by BioDoctor900
 <br>
 https://www.youtube.com/user/Biodoctor900
 <br><br>
-Music made by DoctorOctoroc
+Flappy Box Music made by DoctorOctoroc
 <br>
 https://www.youtube.com/watch?v=RvSk1rosmYY
 <br><br>
-Smartphone icon made by [monkik] from www.flaticon.com
+Smartphone icon in Flappy Box made by [monkik] from www.flaticon.com
 <br>
 https://www.flaticon.com/authors/monkik
 <br><br>
-<a href="https://play.google.com/store/apps/details?id=com.vistaero.BlueBoxSimulator">Play Store</a>
+<a href="https://apps.apple.com/us/app/blue-box-simulator/id1557069711">App Store</a>
 <br>
+<a href="https://play.google.com/store/apps/details?id=com.vistaero.BlueBoxSimulator">Play Store</a>
+<br><br>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Do you want to contact me regarding one of my apps? <a href="mailto:osaa.apps@gmail.com">Just e-mail me</a></p>
+<p>Do you want to contact me regarding one of my apps? <a href="mailto:vistaero@outlook.com">Just e-mail me</a></p>
       </section>
     </div>
     <footer>
