--- a/index.html
+++ b/index.html
@@ -23,54 +23,30 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Spanish Verbs Galaxy Game</h3>
-
-<p>Are you learning spanish and do you think memorizing verb conjugations is very boring?
-<br><br>
-You have find the right app!
-<br><br>
-At the bottom of the screen, we have our little green friend who will tell you the verb you are practicing and the pronoun, and based on its person (first, second or third person) and number (singular or plural), you will have to tap on the asteroid with the adequate verb form.
-<br><br>
-At the beginning, you can only practice the present tense. Each one of the others verbal tense will be unlocked when you complete at least 10 levels of the previous one.
-<br><br>
-Have fun!
-<br><br>
-<a href="https://apps.apple.com/es/app/spanish-verbs-galaxy-game/id1518826993">App Store</a> | <a href="https://play.google.com/store/apps/details?id=com.OSAA.SpanishGalaxyGame">Play Store</a>
-<br><br>
-<strong>
-Alien:</strong><br>
-https://www.instagram.com/p/B1eQdaqiUN2/
-<br><br>
-<strong>
-Background:</strong><br>
-https://www.freepik.com/free-vector/space-background-with-quote_2864903.htm
-<br><br>
-<strong>
-Planets icons:</strong><br>
-https://www.freepik.com/free-vector/set-vector-cartoon-illustrations-fantasy-alien-planets_1215830.htm
-<br><br>
-<strong>
-Locker icon:</strong><br>
-https://www.freepik.com/free-vector/illustration-cloud-security-icon_2609998.htm
-<br><br>
-<strong>
-Heart:</strong><br>
-https://www.freepik.com/free-vector/heart_2900812.htm
-<br><br>
-<strong>
-UFO in the background:</strong><br>
-https://www.freepik.com/free-vector/galaxy-background-with-colorful-planets_2920897.htm
-<br><br>
-<strong>
-Emojis:</strong><br>
-https://www.freepik.com/free-vector/several-emoticons-flat-style_950559.htm
-
-</p>
-
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome! Click on the app of your interest</h3>
+<p>
+  <br>
+    <a href="bbs/index.html">
+      <img src="bbs.png" alt="Blue Box Simulator" style="display: block; margin-left: auto; margin-right: auto; max-width: 200px;">
+    </a>
+    <h2 style="text-align: center; font-weight: bold;">
+      <a href="bbs/index.html" style="text-decoration: none; color: black;">Blue Box Simulator</a>
+    </h2>
+  </p>
+  <br>
+  <p>
+    <a href="spanishverbs.html">
+      <img src="svgg.png" alt="Spanish Verbs Galaxy Game" style="display: block; margin-left: auto; margin-right: auto; max-width: 200px;">
+    </a>
+    <h2 style="text-align: center; font-weight: bold;">
+      <a href="spanishverbs.html" style="text-decoration: none; color: black;">Spanish Verbs Galaxy Game</a>
+    </h2>
+  </p>
+<br>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Do you want to contact me regarding one of my apps? <a href="mailto:osaa.apps@gmail.com">Just e-mail me</a></p>
+<p>Do you want to contact me regarding one of my apps? <a href="mailto:vistaero@outlook.com">Just e-mail me</a></p>
       </section>
     </div>
     <footer>
