--- a/bbs/index.html
+++ b/bbs/index.html
@@ -55,6 +55,8 @@ https://www.flaticon.com/authors/monkik
 <a href="https://apps.apple.com/us/app/blue-box-simulator/id1557069711">App Store</a>
 <br>
 <a href="https://play.google.com/store/apps/details?id=com.vistaero.BlueBoxSimulator">Play Store</a>
+<br>
+<a href="privacy.html">Privacy Policy</a>
 <br><br>
 
 <h3>
